<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">FreshDocs rocks!</string>
	<string name="app_name">FreshDocs</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="hostname">Hostname</string>
	<string name="auth_heading">Authorization </string>
	<string name="advanced_heading">Advanced</string>
	<string name="port">Port</string>
	<string name="hidden_files">Show Hidden Files</string>
	<string name="quit">Quit</string>
	<string name="settings">Settings</string>
	<string name="search">Search</string>
	<string name="refresh">Refresh</string>
	<string name="favorites">Favorites</string>
	<string name="loading">Loading ...</string>
	<string name="browse">Browse</string>
	<string name="search_hint"></string>
	<string name="search_invoke">search</string>
	<string name="error_connection_failed">Server Connection Failed</string>
	<string name="error_invalid_credentials">Invalid Credentials</string>
	<string name="error_server_error">Unknown Server Error</string>
	<string name="send">Share</string>
	<string name="add_favorite">Add Favorite</string>
	<string name="remove_favorite">Remove Favorite</string>
	<string name="email_text">Sent using the Alfresco Android client.</string>
	<string name="email_title">Send Email...</string>
	<string name="preference_filename">prefs.dat</string>
	<string name="add_server">Add Server</string>
	<string name="delete_server">Delete</string>
	<string name="edit_server">Edit</string>
	<string name="ok_button">OK</string>
	<string name="cancel_button">Cancel</string>
	<string name="empty_servers">No Servers</string>	
	<string name="empty_folder">Empty folder</string>	
	<string name="connecting_host">Contacting</string>	
	<string name="ssl">SSL</string>	
	<string name="webapp_root">URL</string>	
	<string name="search_ambiguaous">You must choose a server before searching</string>	
	<string name="about">About</string>	
	<string name="about_description">Another sandbox project from ...</string>	
	<string name="build_date">Build date:</string>	
	<string name="zia_www">http://www.ziaconsulting.com</string>	
	<string name="no_favorites">No Favorites</string>	
	<string name="no_search_results">Empty Search Result</string>	
	<string name="offline">Offline Mode</string>	
	<string name="offline_search_error">Search is unavailable while offline</string>	
	<string name="demo.servername">demo.ziaconsulting.com</string>	
	<string name="demo.username">iphone</string>	
	<string name="demo.password">c4ntgu3ssm3</string>	
</resources>
