<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_refresh"
          android:title="@string/refresh" 
          android:icon="@drawable/refresh"/>
    <item android:id="@+id/menu_item_settings"
          android:title="@string/settings"
          android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/menu_item_search"
          android:title="@string/search"
          android:icon="@android:drawable/ic_menu_search"/>
    <item android:id="@+id/menu_item_favorites"
          android:title="@string/favorites" 
          android:icon="@android:drawable/btn_star"/>
    <item android:id="@+id/menu_item_quit"
          android:title="@string/quit" 
          android:icon="@android:drawable/ic_lock_power_off"/>
</menu>