<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">

	<TableLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:stretchColumns="1">
		
		<TableRow>
		
			<TextView android:text="@string/hostname"
				android:paddingRight="10px"/>
			<EditText android:id="@+id/hostname_edittext" 
				android:hint="@string/hostname"/>
	
		</TableRow>
	
		<TableRow>
	
			<TextView android:text="@string/username"/>
			<EditText android:id="@+id/username_edittext"
				android:hint="@string/username"/>
	
		</TableRow>
	
		<TableRow>
	
			<TextView android:text="@string/password"
				android:layout_width="wrap_content"/>
			<EditText android:id="@+id/password_edittext"
				android:hint="@string/password" 
				android:password="true"/>
	
		</TableRow>

		<TableRow>
	
			<TextView android:text="@string/ssl"
				android:layout_width="wrap_content"/>
			<CheckBox
				android:id="@+id/ssl"
				android:layout_width="wrap_content"
				android:checked="false"/>
	
		</TableRow>

		<TableRow>
	
			<TextView android:text="@string/hidden_files"
				android:layout_width="wrap_content"/>
			<CheckBox 
				android:id="@+id/hidden_files" 
				android:layout_width="wrap_content"
				android:checked="false"/>
	
		</TableRow>

		<TableRow>
	
			<TextView android:text="@string/port"
				android:layout_width="wrap_content"/>
			<EditText android:id="@+id/port_edittext"
				android:hint="@string/port"
				android:text="80"
				android:numeric="integer"/>
	
		</TableRow>
	
		<TableRow>
	
			<TextView android:text="@string/webapp_root"
				android:layout_width="wrap_content"/>
			<EditText android:id="@+id/webapp_root"
				android:hint="@string/port"
				android:text="/alfresco"/>
	
		</TableRow>
	
	</TableLayout>
</ScrollView>	
	